--- a/ImanHangfireSample/ImanHangfireSample.csproj
+++ b/ImanHangfireSample/ImanHangfireSample.csproj
@@ -8,6 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Bogus" Version="35.6.0" />
+    <PackageReference Include="Faker.Data" Version="2.0.1" />
     <PackageReference Include="Hangfire.AspNetCore" Version="1.8.14" />
     <PackageReference Include="Hangfire.Core" Version="1.8.14" />
     <PackageReference Include="Hangfire.Dashboard.Dark.Core" Version="1.0.11" />
